--- a/style.css
+++ b/style.css
@@ -27,4 +27,10 @@ position: relative; /* posição de elemento dentro do fluxo normal do documento
     transform: translate(-50%, -50%); /*  permite modificar o espaço coordenado do modelo de formatação CSS*/
     max-width: 450px; /*  estabelece a largura máxima de um elemento*/
     background-color: white; /* cor do container */
+    border-radius: 20px; /* borda do container */
+    overflow: hidden; /* recorta todo o container de bordas passa pelo border-raius*/
+}
+
+.text-content {
+    padding: 7%; /* define uma a distância entre o conteúdo de um elemento e suas bordas*/
 }
