--- a/style.css
+++ b/style.css
@@ -54,8 +54,66 @@ font-size: 16px;
     border-radius: 16px; /* borda do box*/
     display: flex; /* Torna o elemento um flex container automaticamente transformando todos os seus filhos diretos em flex itens*/
     padding: 25px; /*  são usadas para gerar espaço ao redor do conteúdo de um elemento, dentro de quaisquer bordas definidas*/
-    align-items: center;
+    align-items: center;/* alinhando itens do elemento*/
     justify-content: space-between;
+}
+
+
+.plan-box-left {
+    display: flex; /* Torna o elemento um flex container automaticamente transformando todos os seus filhos diretos em flex itens*/
+    align-items: center; /* alinhando itens do elemento*/
+    text-align: left; /* centralizando texto */
+}
+
+.plan-box-left div {
+    margin: 20px; /* define a margin area na parte inferior de um elemento */
+}
+
+.plan-box-left div h5 {
+    font-weight: 900;  /* estabelece o tamanho da fonte */
+    font-size: 15px; /* tamanho da font */
+    color:  hsl(223, 47%, 23%); /* cor */
+}
+
+.plan-box-left div p {
+    font-size: 14px; /* tamanho da font */
+    color: #8a8a8a; /* cor */
+} 
+
+.plan-box a {
+    font-weight: 900; /* estabelece o tamanho da fonte */
+    color:  hsl(223, 47%, 23%); /*cor */
+}
+
+.plan-box a:hover {
+    text-decoration: none; /*especifica a decoração adicionada ao texto*/
+    color:  hsl(245, 75%, 52%); /*cor*/
+}
+
+a.proced-btn {
+    display: block; /* Torna o elemento um flex container automaticamente transformando todos os seus filhos diretos em flex itens*/
+    text-decoration: none; /*especifica a decoração adicionada ao texto*/
+    color: white; /*cor*/
+    background-color:  hsl(245, 75%, 52%); /*cor do fundo*/
+    padding: 20px 0; /* são usadas para gerar espaço ao redor do conteúdo de um elemento, dentro de quaisquer bordas definidas*/
+    border-radius: 12px; /* borda do elemento*/
+    margin: 30px 0; /* define a área de margem nos quatro lados do elemento.*/
+    transition: background-color .3s ease;
+}
+
+a.proced-btn:hover {
+    background-color: hsl(224, 23%, 55%); /*cor*/
+}
+
+a.cancel-btn {
+    color:  hsl(224, 23%, 55%); /* cor*/
+    text-decoration: none; /*especifica a decoração adicionada ao texto*/
+    font-weight: 900; /* estabelece o tamanho da fonte */
+    transition: color .3s ease; /* tempo de transição do hover e cor*/
+
+}
+a.cancel-btn:hover {
+    color:  hsl(223, 47%, 23%); /*cor*/
 }
 
 
